# language_trainer

./: LICENSE  README.md  pyproject.toml  requirements.txt  trainer.py
configs/finetune/: simple.yaml
datamodules/: gluedatamodule.py  supergluedatamodule.py
modules/: collator.py  finetune.py  gluetransformer.py  mlm_pretrain.py  mlm_pretraining.py  multitasking.py  roberta.py  roberta_lm.py
scripts/: run_cls_ft.sh
trainers/: trainer.py  trainer_glue.py  trainer_mlm_clm.py
utils/: parser_dataclasses.py
