[tool.poetry]
name = "language-trainer"
version = "0.1.0"
description = "Utils for NLP, a training playground"
authors = ["ckarouzos"]
license = "MIT License"
readme = "README.md"
packages = [{include = "language_trainer"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
datasets = "^2.5.2"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
pytorch-lightning = "^1.7.7"
torch = "^1.12.1"
transformers = "^4.22.2"
torchtext = "^0.13.1"
ipdb = "^0.13.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
